--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -173,6 +173,8 @@
   width: 20px;
   height: 20px;
   background-size: 20px 20px;
+  border: none;
+  background-color: transparent;
 }
 
 .diary .schedules .schedule .schedule_edit,
